Fixed minor cursor bug